welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:4: error: method run2 overrides nothing
override def run2() {
             ^